FEATURE: Action history can store blob data, photo name, kg harvest  ...
git-svn-id: http://www.jongle-ris.org/svn/GardeningOverTheSun/branch/br0.10@1156 8d69d5cf-e2a8-420a-b999-7e637039f93c